--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>Angular Elements vs. Web Components</h1>
+
 <p>
   The idea of Angular Elements is both easy and tempting. You have the wonderful Angular framework
   and together with Web Components finally the possibility to use your components everywhere in the modern web - not only in your SPAs.
@@ -552,3 +553,5 @@ export function createCustomElement<P>(...): NgElementConstructor<P> {
     </div>
   </div>
 </section>
+
+THanks for reading.
