Add another question for dependency injection

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -510,7 +510,7 @@ export function createCustomElement<P>(...): NgElementConstructor<P> {
     <div class="example__description">
         <p>
             Can we inject the parent element? If not what's the alternative ?
-            Is normal service injection handled properly ?
+            Is normal service injection handled properly ? Is a service still a singleton when injected into multiple web component (e.g. an auth service) ? 
         </p>
     </div>
     <hr class="example__divider">
